fix: fixed width search input, visibility menu-button

--- a/css/style.css
+++ b/css/style.css
@@ -321,6 +321,10 @@ body {
   margin: auto;
 }
 
+img {
+  max-width: 100%;
+}
+
 .navbar {
   background-color: #ffffff;
 }
@@ -330,6 +334,9 @@ body {
   justify-content: space-between;
   padding-top: 40px;
   padding-bottom: 40px;
+}
+.navbar-top__menu-button {
+  display: none;
 }
 .navbar__search {
   margin: auto;
@@ -412,6 +419,9 @@ body {
   }
 }
 @media (max-width: 992px) {
+  .logo {
+    width: 132px;
+  }
   .container {
     max-width: 700px;
   }
@@ -421,7 +431,6 @@ body {
   }
   .navbar__search {
     margin-left: auto;
-    max-width: 340px;
   }
   .navbar__menu {
     padding-top: 22px;
@@ -431,10 +440,37 @@ body {
     font-size: 12px;
     line-height: 15px;
   }
+  .search__input {
+    width: 340px;
+  }
 }
 @media (max-width: 768px) {
   .container {
     max-width: 576px;
     width: 92%;
+  }
+  .navbar__search, .navbar__menu, .navbar__user {
+    display: none;
+  }
+  .menu-button {
+    display: flex;
+    width: 16px;
+    height: 11px;
+    padding: 0px;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+    border: none;
+    cursor: pointer;
+  }
+  .menu-button__line {
+    width: 16px;
+    height: 1px;
+    background-color: #333333;
+  }
+}
+@media (max-width: 480px) {
+  .logo {
+    width: 99px;
   }
 }/*# sourceMappingURL=style.css.map */
