--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -2,6 +2,8 @@
   .container
     max-width: 960px
 @media (max-width: 992px)
+  .logo
+    width: 132px
   .container
     max-width: 700px
   .navbar
@@ -10,14 +12,37 @@
       padding-bottom: 30px
     &__search
       margin-left: auto
-      max-width: 340px
     &__menu
       padding-top: 22px
       padding-bottom: 22px
       &__link
         font-size: 12px
         line-height: 15px
+  .search
+    &__input
+      width: 340px
 @media (max-width: 768px)
   .container
     max-width: 576px
     width: 92%
+  .navbar
+    &__search,&__menu,&__user
+      display: none
+  .menu
+    &-button
+      display: flex
+      width: 16px
+      height: 11px
+      padding: 0px
+      align-items: center
+      justify-content: space-between
+      flex-direction: column
+      border: none
+      cursor: pointer
+      &__line
+        width: 16px
+        height: 1px
+        background-color: $text-color
+@media (max-width: 480px)
+  .logo
+    width: 99px
